syntax = "proto3";

package dutTestAgent;

// Option for the generated Go package path.
// This ensures that the generated Go files are placed in a proper module structure.
option go_package = "dut_test_agent/proto/dut_agent"; 

// DutAgentService defines the primary interface for interacting with the Device Under Test agent.
// Authentication is handled via JWT tokens in gRPC metadata.
service DutAgentService {
  // CheckAuth verifies if the current client session is authenticated with the agent.
  // This can be used as a simple health/authentication check.
  rpc CheckAuth (CheckAuthRequest) returns (CheckAuthResponse);

  // RunCommand executes a shell command on the DUT.
  rpc RunCommand (RunCommandRequest) returns (RunCommandResponse);

  // GetDeviceInfo retrieves basic identification and status information about the DUT.
  rpc GetDeviceInfo (GetDeviceInfoRequest) returns (GetDeviceInfoResponse);

  // StreamExecutionLogs enables server-side streaming of execution logs from the agent to the client.
  rpc StreamExecutionLogs (StreamExecutionLogsRequest) returns (stream LogEntry);
  
  // --- Example of further extensibility: ---
  // rpc ReadFile (ReadFileRequest) returns (ReadFileResponse);
  // rpc WriteFile (WriteFileRequest) returns (WriteFileResponse);
  // rpc Ping (PingRequest) returns (PingResponse);
}

// CheckAuthRequest is an empty message as no parameters are needed to check authentication status.
message CheckAuthRequest {}

// CheckAuthResponse provides the authentication status.
message CheckAuthResponse {
  bool authenticated = 1; // True if the client is currently authenticated.
  string message = 2;     // A descriptive message, e.g., "Client is authenticated."
}

// RunCommandRequest contains details for executing a command on the DUT.
message RunCommandRequest {
  string command = 1;          // The command to execute (e.g., "ls", "adb shell getprop").
  repeated string args = 2;    // Arguments to pass to the command.
  int32 timeout_seconds = 3;   // Timeout for the command execution in seconds.
  bool sudo = 4;               // If true, attempt to run the command with superuser privileges.
  string working_directory = 5; // (Optional) Working directory for the command.
}

// RunCommandResponse contains the result of the command execution.
message RunCommandResponse {
  int32 exit_code = 1;       // The exit code of the executed command.
  string stdout = 2;         // Standard output from the command.
  string stderr = 3;         // Standard error from the command.
  string error_message = 4;  // Any error message generated by the agent itself (e.g., timeout, command not found).
}

// GetDeviceInfoRequest is an empty message as no parameters are needed.
message GetDeviceInfoRequest {}

// GetDeviceInfoResponse contains various details about the DUT.
message GetDeviceInfoResponse {
  string hostname = 1;      // The hostname of the DUT.
  string os_name = 2;       // e.g., "Linux", "Android".
  string os_version = 3;    // e.g., "13", "5.10.0-10-android".
  string architecture = 4;  // e.g., "arm64", "x86_64".
  // A map for any other arbitrary key-value device properties.
  map<string, string> custom_fields = 5; 
}

// LogLevel defines the severity of a log entry.
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_ERROR = 4;
  LOG_LEVEL_FATAL = 5;
}

// StreamExecutionLogsRequest specifies filters for the log stream.
message StreamExecutionLogsRequest {
  LogLevel min_level = 1; // Only stream logs with this level or higher severity.
  string component_filter = 2; // (Optional) Filter logs by a specific component name.
  bool follow = 3; // If true, stream new logs as they are generated; otherwise, send historical logs and close.
}

// LogEntry represents a single log message from the agent.
message LogEntry {
  string timestamp = 1; // ISO 8601 formatted timestamp, e.g., "2006-01-02T15:04:05Z07:00"
  LogLevel level = 2;
  string component = 3; // (Optional) The component or module that generated the log.
  string message = 4;
}